<resources>
    <string name="app_name">AuctionGame</string>
    <string name="enter_your_bid_here">Enter Your Bid Here:</string>
    <string name="round">Round</string>
    <string name="submit">Submit</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_user">CreateUser</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="your_info">Your Info</string>
    <string name="next_round">Next Round</string>
    <string name="sign_out">Sign Out</string>
    <string name="total">Total</string>
    <string name="new_game">New Game</string>
    <string name="their_info">Their Info</string>
</resources>
