<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.donovan.auctiongame.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewRound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewYourRandom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:numeric="integer|decimal"
        tools:ignore="Deprecated,TextViewEdits"
        android:maxLines="1" />

    <EditText
        android:id="@+id/editTextYourBid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_bid_here"
        android:inputType="numberDecimal"
        android:numeric="decimal"
        tools:ignore="Deprecated" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <Button
        android:id="@+id/buttonNextRound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_round" />

    <TextView
        android:id="@+id/textViewPayoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Payoff"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewYourInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_info" />

    <TextView
        android:id="@+id/textViewTheirInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/their_info" />

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/sign_out" />

</LinearLayout>
